--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -25,7 +25,8 @@ button {
   margin: 0px 0px;
   text-transform: uppercase !important;
   letter-spacing: 1px;
-  font-family: "Roboto", sans-serif !important;
+  font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
+  //font-family: "Roboto", sans-serif !important;
   text-transform: uppercase;
   font-size: 1.3rem !important;
   font-weight: 700 !important;
