fade in nav in header, add overlay to project boxs and add advertising archive project box

--- a/app/assets/styles/components/_timeline.scss
+++ b/app/assets/styles/components/_timeline.scss
@@ -2,7 +2,7 @@ $screen-sm-min : 768px;
 $light-blue : #03a9f4;
 body {
   //font-size: 14px;
-  overflow-x:hidden;
+  //overflow-x:hidden;
   
   header {
     text-align: center;
