--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -10,6 +10,18 @@
 /* Box-sizing border-box */
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+body {
+  //box-sizing: border-box;
+  // padding: 3rem;
+  background-color: rgb(51, 51, 51);
+}
+
+.max-container {
+  position: relative;
+  z-index: 10;
+  padding: 3rem;
+}
+
 a {
     text-decoration: none;
     color: rgba(255,255,255,0.5);
