add TheanoDidot-Regular font for project boxes and remove Roboto font

--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -3,6 +3,11 @@
   src: url('../../../assets/fonts/BrandonText-Medium.OTF');
 }
 
+@font-face {
+  font-family: 'BrandonText-Medium';
+  src: url('../../../assets/fonts/TheanoDidot-Regular.otf');
+}
+
 .tagline {
   color: #fff;
   text-align: center;
