--- a/app/assets/styles/layout/_header.scss
+++ b/app/assets/styles/layout/_header.scss
@@ -26,8 +26,8 @@
           only screen and (min-width: 125em) {
       background-image: linear-gradient(
           to right bottom,
-          rgba($color-primary-light, 0.8),
-          rgba($color-primary-dark, 0.8)),
+          rgba($color-grey-dark-3, 0.8),
+          rgba($color-grey-dark, 0.8)),
       url(../../../assets/images/cctv.jpg);
   }
 
