--- a/app/assets/styles/components/_project-box.scss
+++ b/app/assets/styles/components/_project-box.scss
@@ -65,7 +65,7 @@
     font-weight: 500;
     font-size: 2.1vw;
     opacity: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     letter-spacing: -0.02em;
   }
   @media only screen and (min-width: 1699px) {
@@ -123,7 +123,7 @@
   .inner-content a.project em {
     opacity: 0;
     display: block;
-    font-family: "freight-text-pro", Georgia, Cambria, "Times New Roman", Times, serif;
+    font-family: "TheanoDidot-Regular", serif;
     font-style: italic;
     font-size: 1.1vw;
     -webkit-transform: translateY(-25px);
