--- a/app/assets/styles/components/_project-box.scss
+++ b/app/assets/styles/components/_project-box.scss
@@ -65,7 +65,7 @@
     font-weight: 500;
     font-size: 2.1vw;
     opacity: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'SofiaProRegular', sans-serif;
     letter-spacing: -0.02em;
   }
   @media only screen and (min-width: 1699px) {
