--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -7,11 +7,10 @@
 
 @import "components/project-box";
 @import "components/mixitup-button";
-//@import "components/timeline";
 @import "components/navigation";
 @import "components/composition";
-//@import "components/email-form";
 @import "components/bg-video";
+@import "components/svg-scene";
 
 @import "modules/sprite";
 
