--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -40,7 +40,7 @@
   font-size: 12em;
   line-height: 1em;
   font-weight: 100;
-
+  font-family: 'Raleway', sans-serif;
   @include respond(phone) {
     font-size: 6rem;
   }
@@ -97,8 +97,9 @@
   .projects {
     font-family: 'Source Sans Pro', sans-serif !important;    
     margin: 0 auto;
-    width: 100%;
     height: 6rem;
+    width: 6rem;
+    text-align: center;
     padding-top: 2rem;
     //border-top: 1px solid #777;
     letter-spacing: 3.12px;
@@ -108,7 +109,7 @@
   h5 {
     font-family: 'Source Sans Pro', sans-serif !important;
     text-transform: uppercase;
-    padding-top: .3rem;
+    padding-top: -.3rem;
     padding-left: .8rem;
     font-size: 1.3rem !important;
     font-weight: 700 !important;
