--- a/app/assets/styles/modules/_sprite.scss
+++ b/app/assets/styles/modules/_sprite.scss
@@ -2,7 +2,7 @@
 Instead edit gulp/templates/sprite */
 
     .icon {
-      background-image: url('../../../assets/images/sprites/sprite-1ed97516.svg');
+      background-image: url('../../assets/images/sprites/sprite-1ed97516.svg');
     }
     
     .no-svg .icon {
