--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -95,11 +95,14 @@
   }
 
   .projects {
-    font-family: 'Source Sans Pro', sans-serif !important;    
+    font-family: 'Source Sans Pro', sans-serif !important; 
+    text-transform: uppercase;
+    font-size: 1.3rem !important;
+    font-weight: 700 !important;
+    color: white !important;   
+    width: 20%;
     margin: 0 auto;
     height: 6rem;
-    width: 6rem;
-    text-align: center;
     padding-top: 2rem;
     //border-top: 1px solid #777;
     letter-spacing: 3.12px;
@@ -107,12 +110,5 @@
 
 
   h5 {
-    font-family: 'Source Sans Pro', sans-serif !important;
-    text-transform: uppercase;
-    padding-top: -.3rem;
-    padding-left: .8rem;
-    font-size: 1.3rem !important;
-    font-weight: 700 !important;
-    color: white !important;
     text-align: center
   }
