--- a/app/assets/styles/components/_project-box.scss
+++ b/app/assets/styles/components/_project-box.scss
@@ -62,10 +62,10 @@
   }
   .inner-content a.project span {
     display: block;
-    font-weight: 500;
+    font-weight: 700;
     font-size: 2.1vw;
     opacity: 0;
-    font-family: 'SofiaProRegular', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     letter-spacing: -0.02em;
   }
   @media only screen and (min-width: 1699px) {
