--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -100,12 +100,14 @@
     font-size: 1.3rem !important;
     font-weight: 700 !important;
     color: white !important;   
-    width: 20%;
+    width: 25%;
     margin: 0 auto;
     height: 6rem;
     padding-top: 2rem;
     //border-top: 1px solid #777;
     letter-spacing: 3.12px;
+    cursor: pointer;
+    z-index: 2;
   }
 
 
