--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -35,8 +35,7 @@
         position: fixed;
         top: 6.3rem;
         right: 6.2rem;
-        //background-image: radial-gradient($color-primary-light, $color-primary-dark);
-        background-image: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #0082c8, #05c7e6, #4bd58d);
+        background-image: linear-gradient(238deg, #282886, #4f4fea, #0c27cf, #13269c, #242468, #2648e6);
         background-size: 1200% 1200%;
         -webkit-animation: dboxRainbow 30s ease infinite;
         -moz-animation: dboxRainbow 30s ease infinite;
@@ -76,6 +75,7 @@
         list-style: none;
         text-align: center;
         width: 100%;
+        z-index: 2000;
     }
 
     &__item {
@@ -196,4 +196,15 @@
     
   }
 
-  
+  .shape-overlays {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    top: 0; 
+    left: 0;
+    z-index: 1;
+  }
+
+.shape-overlays path:nth-of-type(1) { fill: #c4dbea; }
+.shape-overlays path:nth-of-type(2) { fill: #4c688b; }
+.shape-overlays path:nth-of-type(3) { fill: #2e496a; }
