--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -1,5 +1,6 @@
 .navigation {
     opacity: 0;
+    
     &__checkbox {
         display: none;
     }
@@ -35,13 +36,13 @@
         position: fixed;
         top: 6.3rem;
         right: 6.2rem;
-        background-image: linear-gradient(238deg, #282886, #4f4fea, #0c27cf, #13269c, #242468, #2648e6);
-        background-size: 1200% 1200%;
-        -webkit-animation: dboxRainbow 30s ease infinite;
-        -moz-animation: dboxRainbow 30s ease infinite;
-        -o-animation: dboxRainbow 30s ease infinite;
-        animation: dboxRainbow 30s ease infinite;
-        -webkit-font-smoothing: subpixel-antialiased;
+        // background-image: linear-gradient(238deg, #282886, #4f4fea, #0c27cf, #13269c, #242468, #2648e6);
+        // background-size: 1200% 1200%;
+        // -webkit-animation: dboxRainbow 30s ease infinite;
+        // -moz-animation: dboxRainbow 30s ease infinite;
+        // -o-animation: dboxRainbow 30s ease infinite;
+        // animation: dboxRainbow 30s ease infinite;
+        // -webkit-font-smoothing: subpixel-antialiased;
         z-index: 1000;
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
@@ -80,6 +81,49 @@
 
     &__item {
         margin: 1rem;
+        transform: translateX(-4rem);
+        transition: transform 0.1s, opacity 0.1s;
+        transition-timing-function: ease-out;
+
+        &.is-opened {
+            transform: translateX(0) rotate(0);
+        }
+        
+        &.is-opened {
+            transition-timing-function: cubic-bezier(0.230, 1.000, 0.355, 1.400);
+        }
+
+        &:nth-of-type(1) {
+            transition-delay: 0s;
+        }
+        
+        &.is-opened:nth-of-type(1) {
+            transition-delay: 0.45s;
+        }
+        
+        &:nth-of-type(2) {
+            transition-delay: 0.05s;
+        }
+        
+        &.is-opened:nth-of-type(2) {
+            transition-delay: 0.5s;
+        }
+        
+        &:nth-of-type(3) {
+            transition-delay: 0.1s;
+        }
+        
+        &.is-opened:nth-of-type(3) {
+            transition-delay: 0.55s;
+        }
+        
+        &:nth-of-type(4) {
+            transition-delay: 0.15s;
+        }
+        
+        &.is-opened:nth-of-type(4) {
+            transition-delay: 0.6s;
+        }
     }
 
     &__link {
@@ -196,15 +240,47 @@
     
   }
 
+//   .shape-overlays {
+//     position: relative;
+// 	width: 100%;
+//     min-height: 100vh;
+//     background-image: linear-gradient(238deg, #282886, #4f4fea, #0c27cf, #13269c, #242468, #2648e6);
+//     // top: 0; 
+//     // left: 0;
+//     z-index: -1;
+//   }
+
   .shape-overlays {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    top: 0; 
-    left: 0;
-    z-index: 1;
-  }
+	width: 100vw;
+	height: 100vh;
+	pointer-events: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+.shape-overlays.is-opened {
+	pointer-events: auto;
+}
+
+.shape-overlays__path:nth-of-type(1) {
+	fill: #241e84;
+}
+
+.shape-overlays__path:nth-of-type(2) {
+	fill: #d3eaa2;
+}
+
+.shape-overlays__path:nth-of-type(3) {
+	fill: #241e84;
+}
+
+.shape-overlays__path:nth-of-type(4) {
+	fill: #241e84;
+}
 
 .shape-overlays path:nth-of-type(1) { fill: #c4dbea; }
 .shape-overlays path:nth-of-type(2) { fill: #4c688b; }
 .shape-overlays path:nth-of-type(3) { fill: #2e496a; }
+
+
