--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -3,6 +3,7 @@
   max-width: 100%;
   padding: 0 0;
   margin: 0 auto;
+  position: relative;
 
   // &:not(:last-child) {
   //     margin-bottom: $gutter-vertical;
