--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -36,6 +36,7 @@
         position: fixed;
         top: 6.3rem;
         right: 6.2rem;
+        background-color: #4c688b;
         // background-image: linear-gradient(238deg, #282886, #4f4fea, #0c27cf, #13269c, #242468, #2648e6);
         // background-size: 1200% 1200%;
         // -webkit-animation: dboxRainbow 30s ease infinite;
@@ -84,6 +85,7 @@
         transform: translateX(0rem);
         transition: transform 0.1s, opacity 0.1s;
         transition-timing-function: ease-out;
+        text-rendering: optimize-legibility;
 
         &.is-opened {
             transform: translateX(0) rotate(0);
@@ -246,7 +248,8 @@
 	pointer-events: none;
 	position: fixed;
 	top: 0;
-	left: 0;
+    left: 0;
+    
 }
 
 .shape-overlays.is-opened {
@@ -272,5 +275,7 @@
 .shape-overlays path:nth-of-type(1) { fill: #c4dbea; }
 .shape-overlays path:nth-of-type(2) { fill: #4c688b; }
 .shape-overlays path:nth-of-type(3) { fill: #2e496a; }
+
+
 
 
