--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -78,16 +78,15 @@
         text-align: center;
         width: 100%;
         z-index: 2000;
+       
+
     }
 
     &__item {
         margin: 1rem;
-        transform: translateX(0rem);
-        transition: transform 0.1s, opacity 0.1s;
-        transition-timing-function: ease-out;
-        text-rendering: optimize-legibility;
-
-        
+        -webkit-text-rendering: optimize-legibility;
+        -webkit-font-smoothing: subpixel-antialiased;
+        backface-visibility: hidden;
     }
 
     &__link {
@@ -136,47 +135,6 @@
         position: fixed;
         top: 0;
         left: 0;
-
-        &__item.is-opened {
-            transform: translateX(0) rotate(0);
-        }
-        
-        &__item.is-opened {
-            transition-timing-function: cubic-bezier(0.230, 1.000, 0.355, 1.400);
-        }
-
-        &__item:nth-of-type(1) {
-            transition-delay: 0s;
-        }
-        
-        &__item.is-opened:nth-of-type(1) {
-            transition-delay: 0.45s;
-        }
-        
-        &__item:nth-of-type(2) {
-            transition-delay: 0.05s;
-        }
-        
-        &__item.is-opened:nth-of-type(2) {
-            transition-delay: 0.5s;
-        }
-        
-        &__item:nth-of-type(3) {
-            transition-delay: 0.1s;
-        }
-        
-        &__item.is-opened:nth-of-type(3) {
-            transition-delay: 0.55s;
-        }
-        
-        &__item:nth-of-type(4) {
-            transition-delay: 0.15s;
-        }
-        
-        &__item.is-opened:nth-of-type(4) {
-            transition-delay: 0.6s;
-        }
-
 
     }
 
