implement project-box image scale on hover

--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -13,6 +13,16 @@
   src: url('../../../assets/fonts/SofiaProRegular.otf');
 }
 
+@font-face {
+  font-family: 'FuturaStd-Book';
+  src: url('../../../assets/fonts/FuturaStd-Book.otf');
+}
+
+@font-face {
+  font-family: 'FuturaStd-ExtraBold';
+  src: url('../../../assets/fonts/FuturaStd-ExtraBold.otf');
+}
+
 .tagline {
   color: #fff;
   text-align: center;
