--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -86,6 +86,7 @@
         margin: 1rem;
         -webkit-text-rendering: optimize-legibility;
         -webkit-font-smoothing: subpixel-antialiased;
+        -moz-osx-font-smoothing: grayscale;
         backface-visibility: hidden;
     }
 
