--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -37,8 +37,8 @@
         top: 6.3rem;
         right: 6.2rem;
         background-color: #4c688b;
-        // background-image: linear-gradient(238deg, #282886, #4f4fea, #0c27cf, #13269c, #242468, #2648e6);
-        // background-size: 1200% 1200%;
+        background-image: linear-gradient(238deg, #282886, #4f4fea, #0c27cf, #13269c, #242468, #2648e6);
+        background-size: 1200% 1200%;
         // -webkit-animation: dboxRainbow 30s ease infinite;
         // -moz-animation: dboxRainbow 30s ease infinite;
         // -o-animation: dboxRainbow 30s ease infinite;
@@ -48,13 +48,13 @@
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
         @include respond(tab-port) {
-            top: 4.5rem;
-            right: 4.5rem;
+            //top: 4.5rem;
+            //right: 4.5rem;
         }
 
         @include respond(phone) {
-            top: 3.5rem;
-            right: 3.5rem;
+            //top: 3.5rem;
+            //right: 3.5rem;
         }
     }
 
@@ -78,8 +78,6 @@
         text-align: center;
         width: 100%;
         z-index: 2000;
-       
-
     }
 
     &__item {
@@ -204,7 +202,7 @@
     
   }
 
-  .shape-overlays {
+  nav .shape-overlays {
 	width: 100vw;
 	height: 100vh;
 	pointer-events: none;
