--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -22,7 +22,7 @@
   color: #fff;
   text-align: center;
   //background-color: #343434;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'BrandonText-Medium', sans-serif;
   text-transform: uppercase;
   padding-top: 10em;
   padding-bottom: 11em;
@@ -42,24 +42,15 @@
 
 .main-headline-r2 {
   margin: 0;
-  font-size: 12em;
+  font-size: 9em;
   line-height: 1em;
   font-weight: 100;
-  font-family: 'Raleway', sans-serif;
+  letter-spacing: .42rem;
+  font-family: 'FuturaStd-ExtraBold', sans-serif;
 
   @include respond(phone) {
     font-size: 6rem;
   }
-}
-
-.main-headline-r3 {
-  font-family: 'EB Garamond', serif;
-  font-size: 2em;
-  line-height: 1em;
-  font-weight: 100;
-  padding-top: 2rem;
-  letter-spacing: 0.5em;
-  display: inline-block; 
 }
 
 .navigation__link {
