implement modal overlay with menu scroll functionality

--- a/app/assets/styles/base/_animations.scss
+++ b/app/assets/styles/base/_animations.scss
@@ -1,5 +1,38 @@
 /* Animations */
-@-webkit-keyframes bg-scale { 100% { transform: scale(1.5) }}
+
+@-webkit-keyframes intervalHamburgerBorder {
+	0% {
+		opacity: 1;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+	80% {
+		-webkit-transform: scale(1.6);
+		transform: scale(1.6);
+	}
+	100% {
+		opacity: 0;
+		-webkit-transform: scale(1.6);
+		transform: scale(1.6);
+	}
+}
+
+@keyframes intervalHamburgerBorder {
+	0% {
+		opacity: 1;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+	}
+	80% {
+		-webkit-transform: scale(1.6);
+		transform: scale(1.6);
+	}
+	100% {
+		opacity: 0;
+		-webkit-transform: scale(1.6);
+		transform: scale(1.6);
+	}
+}
 
 @-webkit-keyframes dboxRainbow {
     0% {
