--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -102,6 +102,7 @@
   }
 
   .projects {
+    opacity: 1;
     font-family: 'Source Sans Pro', sans-serif !important; 
     text-transform: uppercase;
     font-size: 1.3rem !important;
@@ -115,7 +116,15 @@
     letter-spacing: 3.12px;
     cursor: pointer;
     position: relative;
-    z-index: 10;
+    z-index: 95;
+  }
+
+  .projects.is-closed {
+    opacity: 0;
+    transform: translateY(0) rotate(0);
+    pointer-events: auto;
+    transition-delay: 250ms;
+    transition-timing-function: ease;
   }
 
 
