--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -4,7 +4,7 @@
   padding: 0 0;
   margin: 0 auto;
   position: relative;
-
+  pointer-events: none;
   // &:not(:last-child) {
   //     margin-bottom: $gutter-vertical;
 
