--- a/app/assets/styles/abstracts/_variables.scss
+++ b/app/assets/styles/abstracts/_variables.scss
@@ -50,11 +50,11 @@ $gutter-horizontal: 6rem;
 	--font-size-title: 6vmax;
 	--font-weight-title: 300;
 	--color-menu: #3735d0;
-	--color-menu-hover: #b2dc53;
+	--color-menu-hover: #333;
 	--font-family-menu: var(--font-family-title);
 	--font-size-menu: 4vmax;
 	--font-weight-menu: 300;
-	--button-bg: #b3dc53;
+	--button-bg: #777;
 	--button-circle: #1b198b;
 	--button-line: #fff;
 }
