add pointer events to phone and small phone media queries for grid row

--- a/app/assets/styles/components/_mixitup-button.scss
+++ b/app/assets/styles/components/_mixitup-button.scss
@@ -19,7 +19,7 @@
 #mix-wrapper {
   z-index: 111;
   position: relative;
-  pointer-events: none;
+  //pointer-events: none;
 }
 
 /* General button style (reset) */
