--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -4,7 +4,7 @@
   padding: 0 0;
   margin: 0 auto;
   position: relative;
-  pointer-events: none;
+  
   // &:not(:last-child) {
   //     margin-bottom: $gutter-vertical;
 
@@ -15,6 +15,12 @@
   
   @include respond(phone) {
     max-width: 100%;
+    pointer-events: none;
+  }
+
+  @include respond(small-phone) {
+    max-width: 100%;
+    pointer-events: none;
   }
 
   @include clearfix;
@@ -75,6 +81,7 @@
 section {
   position: relative;
   z-index: 95;
+  //pointer-events: none;
 }
 
   .box {
