change tagline r1 font, hamburger bg color and overlay menu hover

--- a/app/assets/styles/abstracts/_variables.scss
+++ b/app/assets/styles/abstracts/_variables.scss
@@ -54,7 +54,7 @@ $gutter-horizontal: 6rem;
 	--font-family-menu: var(--font-family-title);
 	--font-size-menu: 4vmax;
 	--font-weight-menu: 300;
-	--button-bg: #777;
+	--button-bg: #4f7b86;
 	--button-circle: #1b198b;
 	--button-line: #fff;
 }
