--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -266,41 +266,79 @@ main {
 	font-weight: 700;
 	text-align: center;
 	opacity: 0;
-	transform: translateY(-100%);
+	//transform: translateY(-100%);
 	//pointer-events: none;
-	display: block;
-	margin: 1.25em 0;
-	transition: transform 0.3s, opacity 0.3s;
-	transition-timing-function: ease-in;
+	
+	//transition: transform 0.3s, opacity 0.3s;
+	//transition-timing-function: ease-in;
+
+	&__link {
+        &:link,
+        &:visited {
+			//display: inline-block;
+			display: block;
+			margin: 1.25em 0;
+            //font-size: 3rem;
+            //font-weight: 300;
+            padding: 1rem 2rem;
+            color: #fff;
+            text-decoration: none;
+            text-transform: uppercase;
+            background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+            background-size: 220%;
+            transition: all .4s;
+
+            span {
+                margin-right: 1.5rem;
+                display: inline-block;
+            }
+        }
+        
+        // &:hover,
+        // &:active {
+        //     background-position: 100%;
+        //     color: #333;
+        //     transform: translateX(1rem);
+        // }
+	}
+}
+
+.global-menu__item.is-opened {
+	opacity: 1;
+	//transform: translateY(0) rotate(0);
+	pointer-events: auto;
+	transition-timing-function: ease;
+	transition-delay: 0.45s;
+	transform: opacity ease;
 }
 
 .global-menu__item--demo-4 {
 	transition: transform 0.1s, opacity 0.1s;
-	transition-timing-function: ease-out;
+	transition-timing-function: ease-in;
 }
 
 .global-menu__item--demo-4 {
 	transform: translateX(40%);
 }
 
-.global-menu__item:hover {
-	color: var(--color-menu-hover);
-}
-
-.global-menu__item.is-opened {
-	opacity: 1;
-	transform: translateY(0) rotate(0);
-	pointer-events: auto;
-	transition-timing-function: ease;
-}
-
 .global-menu__item--demo-4.is-opened {
 	transform: translateX(0) rotate(0);
+
+	&:hover,
+	&:active {
+		background-position: 100%;
+		color: #333;
+		transform: translateX(1rem);
+	}
 }
 
-.global-menu__item--demo-4.is-opened {
-	transition-timing-function: cubic-bezier(0.230, 1.000, 0.355, 1.400);
-}
+// .global-menu__item:hover {
+// 	color: var(--color-menu-hover);
+// }
+
+// .global-menu__item--demo-4.is-opened {
+// 	transition-timing-function: cubic-bezier(0.230, 1.000, 0.355, 1.400);
+// }
 
 .global-menu__item:nth-of-type(1) {
 	transition-delay: 0.05s;
@@ -342,42 +380,42 @@ main {
 	transition-delay: 0.65s;
 }
 
-// /* demo 4 */
-// .global-menu__item--demo-4.is-opened {
-// 	transition-duration: 0.6s;
-// }
+/* demo 4 */
+.global-menu__item--demo-4.is-opened {
+	transition-duration: 0.6s;
+}
 
-// .global-menu__item--demo-4:nth-of-type(1) {
-// 	transition-delay: 0s;
-// }
+.global-menu__item--demo-4:nth-of-type(1) {
+	transition-delay: 0s;
+}
 
-// .global-menu__item--demo-4.is-opened:nth-of-type(1) {
-// 	transition-delay: 0.45s;
-// }
+.global-menu__item--demo-4.is-opened:nth-of-type(1) {
+	transition-delay: 0.45s;
+}
 
-// .global-menu__item--demo-4:nth-of-type(2) {
-// 	transition-delay: 0.05s;
-// }
+.global-menu__item--demo-4:nth-of-type(2) {
+	transition-delay: 0.05s;
+}
 
-// .global-menu__item--demo-4.is-opened:nth-of-type(2) {
-// 	transition-delay: 0.5s;
-// }
+.global-menu__item--demo-4.is-opened:nth-of-type(2) {
+	transition-delay: 0.5s;
+}
 
-// .global-menu__item--demo-4:nth-of-type(3) {
-// 	transition-delay: 0.1s;
-// }
+.global-menu__item--demo-4:nth-of-type(3) {
+	transition-delay: 0.1s;
+}
 
-// .global-menu__item--demo-4.is-opened:nth-of-type(3) {
-// 	transition-delay: 0.55s;
-// }
+.global-menu__item--demo-4.is-opened:nth-of-type(3) {
+	transition-delay: 0.55s;
+}
 
-// .global-menu__item--demo-4:nth-of-type(4) {
-// 	transition-delay: 0.15s;
-// }
+.global-menu__item--demo-4:nth-of-type(4) {
+	transition-delay: 0.15s;
+}
 
-// .global-menu__item--demo-4.is-opened:nth-of-type(4) {
-// 	transition-delay: 0.6s;
-// }
+.global-menu__item--demo-4.is-opened:nth-of-type(4) {
+	transition-delay: 0.6s;
+}
 
 .shape-overlays {
 	width: 100vw;
