--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -193,7 +193,7 @@
 
 .nav-logo {
     position: absolute;
-    top: -10%;
+    top: -15%;
     left: 45%;
     height: 50px;
     width: 50px;
@@ -285,7 +285,9 @@ main {
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
             background-size: 220%;
-            transition: all .3s ease;
+			//transition: all .3s ease;
+			transition: all .4s ease !important;
+
 
             span {
                 margin-right: 1.5rem;
@@ -293,12 +295,13 @@ main {
             }
         }
         
-        // &:hover,
-        // &:active {
-        //     background-position: 100%;
-        //     color: #333;
-        //     transform: translateX(1rem);
-        // }
+        &:hover,
+        &:active {
+			transition-delay: 0s !important;
+			background-position: 100%;
+			color: #333;
+			transform: translateX(1rem);
+        }
 	}
 }
 
@@ -312,7 +315,7 @@ main {
 }
 
 .global-menu__item--demo-4 {
-	transition: transform 0.1s, opacity 0.1s;
+	transition: transform 0.1s, opacity 1s;
 	transition-timing-function: ease;
 }
 
@@ -322,18 +325,10 @@ main {
 
 .global-menu__item--demo-4.is-opened {
 	transform: translateX(0) rotate(0);
-
-	&:hover,
-	&:active {
-		background-position: 100%;
-		color: #333;
-		transform: translateX(1rem);
-	}
+	opacity: 1;
+	transition-delay: 375ms !important;
+    transition-timing-function: ease;
 }
-
-// .global-menu__item:hover {
-// 	color: var(--color-menu-hover);
-// }
 
 // .global-menu__item--demo-4.is-opened {
 // 	transition-timing-function: cubic-bezier(0.230, 1.000, 0.355, 1.400);
