change font to EB Garamond for about call to action

--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -61,11 +61,12 @@
 
 
   h3.cta {
-    font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
+    font-family: 'EB Garamond', serif;
+    //font-family: 'FuturaStd-Book', Arial, Helvetica, sans-serif;
     // font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
     color: #fff;
     font-weight: 700;
-    letter-spacing: -0.035em;
+    letter-spacing: 0.015em;
     text-rendering: optimizelegibility;
     font-size: 4vw;
     line-height: 1.3em;
