--- a/app/assets/styles/components/_navigation.scss
+++ b/app/assets/styles/components/_navigation.scss
@@ -301,6 +301,7 @@ main {
 			background-position: 100%;
 			color: #333;
 			transform: translateX(1rem);
+
         }
 	}
 }
@@ -320,11 +321,11 @@ main {
 }
 
 .global-menu__item--demo-4 {
-	transform: translateX(40%);
+	//transform: translateX(40%);
 }
 
 .global-menu__item--demo-4.is-opened {
-	transform: translateX(0) rotate(0);
+	//transform: translateX(0) rotate(0);
 	opacity: 1;
 	transition-delay: 375ms !important;
     transition-timing-function: ease;
@@ -699,41 +700,6 @@ main {
 	transition-duration: 0s;
 }
 
-
-  
-.shape-overlays {
-	width: 100vw;
-	height: 100vh;
-	pointer-events: none;
-	position: fixed;
-	top: 0;
-    left: 0;
-    
-}
-
-.shape-overlays.is-opened {
-pointer-events: auto;
- }
-
-.shape-overlays__path:nth-of-type(1) {
-	fill: #241e84;
-}
-
-.shape-overlays__path:nth-of-type(2) {
-	fill: #d3eaa2;
-}
-
-.shape-overlays__path:nth-of-type(3) {
-	fill: #241e84;
-}
-
-.shape-overlays__path:nth-of-type(4) {
-	fill: #241e84;
-}
-
-.shape-overlays path:nth-of-type(1) { fill: #c4dbea; }
-.shape-overlays path:nth-of-type(2) { fill: #4c688b; }
-.shape-overlays path:nth-of-type(3) { fill: #2e496a; }
 
 
 
