--- a/app/assets/styles/components/_ta-overlay.scss
+++ b/app/assets/styles/components/_ta-overlay.scss
@@ -185,12 +185,14 @@ p{
 .menu{
     position:absolute;
     top:15px;
-    left:15px;
+    right:15px;
     z-index:1003;
     outline:none;
     -webkit-tap-highlight-color:transparent;
     width:4rem;
-    padding:10px 10px
+    padding:10px 10px;
+    cursor: pointer;
+    pointer-events: auto;
 }
 .menu-icon-line{
     display:block;
@@ -730,7 +732,7 @@ html,body{
 	min-height: 100vh;
     background-color: var(--color-main-bg);
 	z-index: 110;
-	pointer-events: auto;
+	pointer-events: none;
 }
 .wrapper{
     position:relative;
