remove footer-reveal.js from App.js

--- a/app/assets/styles/components/_ta-overlay.scss
+++ b/app/assets/styles/components/_ta-overlay.scss
@@ -578,28 +578,28 @@ p{
 .text-highlighted{
     color:#ca6055
 }
-.footer{
-    font-size:14px;
-    line-height:1.9em;
-    max-width:550px;
-    padding:130px 20px 40px;
-    margin:0 auto;
-    background:url(/images/profile@2x.jpg) center 0/110px 110px no-repeat;
-    text-align:center
-}
-@media all and (max-width: 600px){
-    .footer{
-        font-size:13px
-    }
-}
-@media all and (max-width: 500px){
-    .footer{
-        font-size:12px
-    }
-}
-.footer-wrapper{
-    overflow:hidden
-}
+// .footer{
+//     font-size:14px;
+//     line-height:1.9em;
+//     max-width:550px;
+//     padding:130px 20px 40px;
+//     margin:0 auto;
+//     background:url(/images/profile@2x.jpg) center 0/110px 110px no-repeat;
+//     text-align:center
+// }
+// @media all and (max-width: 600px){
+//     .footer{
+//         font-size:13px
+//     }
+// }
+// @media all and (max-width: 500px){
+//     .footer{
+//         font-size:12px
+//     }
+// }
+// .footer-wrapper{
+//     overflow:hidden
+// }
 .single-page{
     text-align:center;
     font-family:EB Garamond, serif
