--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -10,7 +10,8 @@
     border-top: 1px solid $color-grey-dark-3;
     font-size: 1.4rem;
     color: $color-grey-light-1;
-    padding: 28rem 3rem 30rem 3rem;
+    padding: 20rem 3rem 14rem 3rem;
+    //opacity: 0;
 
     //background-attachment: fixed;
   
