--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -83,6 +83,13 @@ p {
   overflow: hidden;
 }
 
+#body-content-wrapper {
+  z-index:1;
+  position:relative;
+  box-shadow:0px 0px 40px rgba(0,0,0,0.8);
+  background:#333
+}
+
 .icon {
   background-size: 90px;
   width: 21.5px;
