--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -43,8 +43,8 @@
   }
 
   .col-1-of-2 {
-      //width: calc((100% - #{$gutter-horizontal}) / 2);
-      width: calc(100% / 2);
+      width: calc((100% - #{$gutter-horizontal}) / 2);
+      //width: calc(100% / 2);
 
   }
 
