--- a/app/assets/styles/components/_ta-overlay.scss
+++ b/app/assets/styles/components/_ta-overlay.scss
@@ -332,7 +332,7 @@ p{
     z-index:-1;
     background-color:#fff;
     position:absolute;
-    top:5px;
+    top:6px;
     -webkit-transform:scaleX(.3);
     transform:scaleX(.3)
 }
@@ -386,9 +386,9 @@ p{
     transform:scaleY(0);
     -webkit-transform-origin:0 100%;
     transform-origin:0 100%;
-    -webkit-transition:all 0.25s ease;
-    transition:all 0.25s ease;
-    z-index:-1
+    -webkit-transition:all 0.25s ease-in-out;
+    transition:all 0.25s ease-in-out;
+    z-index:-5;
 }
 @media all and (max-height: 720px){
     .nav-link{
