--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -16,15 +16,16 @@ body {
   background-color: rgb(51, 51, 51);
 }
 
-.max-container {
-  position: relative;
-  z-index: 10;
-  padding: 3rem;
-}
+// .max-container {
+//   position: relative;
+//   z-index: 10;
+//   padding: 3rem;
+// }
 
 a {
     text-decoration: none;
-    color: rgba(255,255,255,0.5);
+    //color: rgba(255,255,255,0.5);
+    color: #f95759;
     outline: 0;
     text-decoration: none !important;
     //color: slategrey !important;
