--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -22,7 +22,7 @@
   color: #fff;
   text-align: center;
   //background-color: #343434;
-  font-family: 'FuturaStd-Book', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   text-transform: uppercase;
   padding-top: 10em;
   padding-bottom: 11em;
@@ -100,7 +100,7 @@
     text-transform: uppercase;
     font-size: 1.3rem !important;
     font-weight: 700 !important;
-    color: white !important;   
+    color: #f95759 !important;   
     width: 25%;
     margin: 0 auto;
     height: 6rem;
