--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -17,9 +17,11 @@
   }
 
   .bio {
-    font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
+    font-family: 'Georgia', serif;
+    //font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
     // font-family: "Whitney SSm A","Whitney SSm B","Lucida Grande","Lucida Sans",Verdana,Helvetica,Arial,sans-serif;  
     text-align: center;
+    line-height: 1.3em;
     width: auto;
     max-width: 780px;
     display: block;
