--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -193,8 +193,9 @@ p {
   display: inline-block !important;
   position: relative !important;
   top: 8px !important;
-  left: 1px !important;
+  left: 0px !important;
   transition: all .2s;
+  -webkit-filter: drop-shadow(0px 0px 4px rgba(247, 87, 89, 0.8));
 
   &:hover {
     -webkit-filter: drop-shadow(0px 0px 4px rgba(247, 87, 89, 0.8));
