--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -3,13 +3,13 @@ footer{
     z-index:0;
     height:400px;
     text-align:center;
-    background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #0082c8, #05c7e6, #4bd58d);
-    background-size: 1200% 1200%;
-    -webkit-animation: dboxRainbow 30s ease infinite;
-    -moz-animation: dboxRainbow 30s ease infinite;
-    -o-animation: dboxRainbow 30s ease infinite;
-    animation: dboxRainbow 30s ease infinite;
-    -webkit-font-smoothing: subpixel-antialiased;
+    // background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #0082c8, #05c7e6, #4bd58d);
+    // background-size: 1200% 1200%;
+    // -webkit-animation: dboxRainbow 30s ease infinite;
+    // -moz-animation: dboxRainbow 30s ease infinite;
+    // -o-animation: dboxRainbow 30s ease infinite;
+    // animation: dboxRainbow 30s ease infinite;
+    // -webkit-font-smoothing: subpixel-antialiased;
     background-color: #333;
     background-attachment:fixed;
 }
