--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -28,17 +28,18 @@ a {
     color: #f95759;
     outline: 0;
     text-decoration: none !important;
-    //color: slategrey !important;
   }
   
 a:hover {
+    color: rgba(249, 87, 89, .5);
     outline: 0;
     text-decoration: none !important;
+    transition: all 150ms ease;
   }
 
-  a:active, a:focus {
-    color: rgba(255,255,255,0.5);
-  }
+  // a:active, a:focus {
+  //   color: rgba(255,255,255,0.5);
+  // }
   
 ul {
     margin: 0;
@@ -118,12 +119,16 @@ p {
   height: 72px;
   position: relative;
 
+  @include respond(big-desktop) {
+    margin: 0 60px 5px 5px !important;
+}
+
   @include respond(tab-land) {
   width: 70px;
 }
 
 @include respond(ipad-port) {
-  width: 40px;
+  width: 32px;
 }
 
 
