adjust footer height and padding for phone port layout

--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -121,6 +121,9 @@
     @include respond(ipad-port) {
       padding-top: 2.6rem;
     }
+    @include respond(phone) {
+      padding-top: 2.2rem;
+    }
   }
 
   .projects.is-closed {
