--- a/app/assets/styles/layout/_about.scss
+++ b/app/assets/styles/layout/_about.scss
@@ -12,7 +12,7 @@
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 
       @include respond(phone) {
-        padding: .5rem .5rem;
+        padding: 3rem 2rem;
       }
   }
 
