--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -12,6 +12,10 @@ footer{
     // -webkit-font-smoothing: subpixel-antialiased;
     background-color: #333;
     background-attachment:fixed;
+
+    @include respond(phone) {
+        height: 500px;
+    }
 }
 footer .footer{
     position:absolute;
@@ -37,6 +41,10 @@ footer .footer{
     @include respond(tab-land) {
         margin-left: 2.6rem;
 
+    }
+    @include respond(phone) {
+        height: 500px;
+        padding-top: .2rem;
     }
   
     // @include respond(tab-land) {
