responsive queries for phone and small-phone

--- a/app/assets/styles/abstracts/_mixins.scss
+++ b/app/assets/styles/abstracts/_mixins.scss
@@ -25,9 +25,14 @@
 1800px + :      Big desktop
 
 $breakpoint argument choices:
+- small-phone
 - phone
+- ipad-port
 - tab-port
 - tab-land
+- desktop
+- mid-desktop
+- hi-res desktop
 - big-desktop
 
 Implementing ORDER: Base + Typography > General Layout + Grid > Page Layout + Components
