--- a/app/assets/styles/base/_base.scss
+++ b/app/assets/styles/base/_base.scss
@@ -16,12 +16,6 @@ body {
   background-color: rgb(51, 51, 51);
 }
 
-// .max-container {
-//   position: relative;
-//   z-index: 10;
-//   padding: 3rem;
-// }
-
 a {
     text-decoration: none;
     //color: rgba(255,255,255,0.5);
@@ -89,7 +83,7 @@ p {
   z-index:1;
   position:relative;
   box-shadow:0px 0px 40px rgba(0,0,0,0.8);
-  background:#333
+  background:#333;
 }
 
 .icon {
@@ -133,14 +127,6 @@ p {
 
 
 }
-
-// @media (max-width: 530px) {
-
-//   .social-icons__icon {
-//     width: 70px;
-//     margin: 0 5px;
-//   }
-// }
 
 .social-icons__icon .icon {
   display: block;
