implement icon animation bg-header

--- a/app/assets/styles/base/_animations.scss
+++ b/app/assets/styles/base/_animations.scss
@@ -1,4 +1,48 @@
 /* Animations */
+
+@-webkit-keyframes cascade {
+    0% {
+        -webkit-transform: 
+    rotateX(50deg) rotateZ(45deg)     translateY(1400px) scale(1.2) translateX(0);
+        transform: rotateX(50deg) rotateZ(45deg) translateY(1400px) scale(1.2) translateX(0);
+        opacity: 0
+    }
+    0.1% {
+        opacity: 0
+    }
+    0.2% {
+        opacity: 1
+    }
+    99.9% {
+        opacity: 1
+    }
+    100% {
+        -webkit-transform: rotateX(50deg) rotateZ(45deg) translateY(1400px) scale(1.2) translateX(-4000px);
+        transform: rotateX(50deg) rotateZ(45deg) translateY(1400px) scale(1.2) translateX(-4000px);
+        opacity: 0
+    }
+}
+@keyframes cascade {
+    0% {
+        -webkit-transform: rotateX(50deg) rotateZ(45deg) translateY(1400px) scale(1.2) translateX(0);
+        transform: rotateX(50deg) rotateZ(45deg) translateY(1400px) scale(1.2) translateX(0);
+        opacity: 0
+    }
+    0.1% {
+        opacity: 0
+    }
+    0.2% {
+        opacity: 1
+    }
+    99.9% {
+        opacity: 1
+    }
+    100% {
+        -webkit-transform: rotateX(50deg) rotateZ(45deg) translateY(1400px) scale(1.2) translateX(-4000px);
+        transform: rotateX(50deg) rotateZ(45deg) translateY(1400px) scale(1.2) translateX(-4000px);
+        opacity: 0
+    }
+}
   
  
 
