--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -5,6 +5,7 @@
 @import "base/typography";
 @import "base/base";
 
+@import "components/_header-bg";
 @import "components/project-box";
 @import "components/mixitup-button";
 @import "components/ta-overlay";
