implement icon animation bg-header

--- a/app/assets/styles/base/_typography.scss
+++ b/app/assets/styles/base/_typography.scss
@@ -37,7 +37,7 @@
 
 .main-headline-r1 {
   color: #f95759;
-  border-bottom: 3px dotted #5d5d5d;
+  border-bottom: 3px dotted rgba(255,255,255, 0.3);
   font-size: 3.2em;
   font-weight: 800;
   line-height: 1.6em;
