--- a/app/assets/styles/layout/_grid.scss
+++ b/app/assets/styles/layout/_grid.scss
@@ -58,6 +58,13 @@
         width: 100%;
       }
 
+    //   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    //         only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em) {
+    //       display: block;
+    //       float: left;
+    //       width: 100%;
+    // }
+
   }
 
   .col-2-of-3 {
@@ -77,6 +84,7 @@
   }
 
 }
+
 
 section {
   position: relative;
